# rtdetr_v2_onnx_test

./: README.md  batch_inference.py  gpu_inference_results.csv  inference_times.txt  onnx_export_rtdetr.sh  pyproject.toml  quantize_fp16.py  quantize_rtdetr.py  rtdetr_onnx_infer.py  rtdetr_v2_r18vd_export.py  vit_export.py
